--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,7 @@
             "email": "feliperangel897@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "guzzlehttp/guzzle": "^7.9"
+    }
 }
