--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/css-selector": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.4"
+        "phpunit/phpunit": "^11.4",
+        "squizlabs/php_codesniffer": "^3.11"
     }
 }
