--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,13 @@
         "symfony/css-selector": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.4",
         "squizlabs/php_codesniffer": "^3.11",
-        "phan/phan": "^5.4"
+        "phan/phan": "^5.4",
+        "pestphp/pest": "^3.5"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
