--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.11",
         "phan/phan": "^5.4",
-        "pestphp/pest": "^3.5"
+        "pestphp/pest": "^3.5",
+        "mockery/mockery": "^1.6"
     },
     "config": {
         "allow-plugins": {
